# urlgrabber

./: .cvsignore  .gitignore  .packit.yaml  ChangeLog  MANIFEST.in  README  TODO  makefile  python-urlgrabber.spec  setup.cfg  setup.py  urlgrabber.py
maint/: cvs2cl.pl  license-notice  usermap
scripts/: urlgrabber  urlgrabber-ext-down
test/: base_test_code.py  grabberperf.py  munittest.py  runtests.py  test_byterange.py  test_grabber.py  test_keepalive.py  test_mirror.py  test_urlgrabber.py
test/support/squid/: squid-setup  squid.conf
test/support/testdata/: README  reference  test_post.php
test/support/testdata/mirror/m2/: broken.txt  test1.txt
test/support/vsftpd/: ftp-server-setup  vsftpd.conf  vsftpd.user_list
test/threading/: batchgrabber.py  urls-keepalive  urls-many
urlgrabber/: __init__.py  byterange.py  grabber.py  keepalive.py  mirror.py  progress.py
