[metadata]
name = urlgrabber
license = LGPLv2+
author = Ryan Tomayko, Seth Vidal, Zdenek Pavlas
author_email = rtomayko@naeblis.cx, skvidal@fedoraproject.org, zpavlas@redhat.com
description = A high-level cross-protocol url-grabber
long_description = file: README
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Topic :: Internet :: File Transfer Protocol (FTP)
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = urlgrabber
setup_requires = setuptools>=30.3.0; setuptools_scm
install_requires = pycurl; six
scripts = scripts/urlgrabber
